--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-leaflet-cluster": "^2.1.0",
     "react-map-gl": "^7.1.7",
     "react-scroll": "^1.9.0",
-    "tailwind-merge": "^2.2.0"
+    "tailwind-merge": "^2.2.0",
+    "topojson-client": "^3.1.0"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.8",
@@ -33,6 +34,7 @@
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/topojson-client": "^3.1.4",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
